--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Página Inicial</title>
     <style>
+        /* Estilos principais */
         body {
             background: url('/static/fundo.jpeg') no-repeat center center fixed;
             background-size: cover;
@@ -18,6 +20,7 @@
             color: white;
         }
 
+        /* Cabeçalho */
         header {
             display: flex;
             justify-content: space-between;
@@ -31,6 +34,7 @@
             height: 80px;
         }
 
+        /* Títulos */
         h1 {
             text-align: center;
             margin-top: 20px;
@@ -40,11 +44,13 @@
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
         }
 
+        /* Parágrafos */
         p {
             text-align: center;
             font-size: 18px;
         }
 
+        /* Barra de navegação */
         nav {
             text-align: center;
             margin: 20px 0;
@@ -75,6 +81,7 @@
             width: 80%;
         }
 
+        /* Seções */
         section {
             text-align: center;
             margin: 20px auto;
@@ -117,6 +124,7 @@
             box-shadow: none;
         }
 
+        /* Rodapé */
         footer {
             background-color: rgba(0, 0, 0, 0.8);
             color: white;
@@ -132,14 +140,17 @@
     </style>
 </head>
 <body>
+    <!-- Cabeçalho -->
     <header>
-        <img src="/static/PCGO.jpg" alt="Polícia Civil">
-        <img src="/static/SIH-GO.jpg" alt="Superintendência de Identificação Humana">
+        <img src="/static/PCGO.jpg" alt="Logo da Polícia Civil">
+        <img src="/static/SIH-GO.jpg" alt="Logo da Superintendência de Identificação Humana">
     </header>
 
+    <!-- Título e informações do usuário -->
     <h1>Bem-vindo ao Sistema de Chamados Informática SIH/PC-GO</h1>
     <p>Usuário: {{ nome_usuario }} ({{ usuario_tipo }})</p>
 
+    <!-- Barra de navegação -->
     <nav>
         {% if usuario_tipo == 'Administrador' %}
             <a href="/gerenciar_usuarios">Gerenciar Usuários</a> |
@@ -154,6 +165,7 @@
 
     <hr>
 
+    <!-- Opções rápidas -->
     <section>
         <h2>Opções Rápidas</h2>
         <button onclick="window.location.href='/gerenciar_usuarios'" {% if usuario_tipo != 'Administrador' %}disabled{% endif %}>
@@ -170,9 +182,11 @@
         </button>
     </section>
 
+    <!-- Rodapé -->
     <footer>
         <p>Seção Setorial de Informática/SIH-PCGO - Tel: (62) 3201-2706 / 2701 e-mail: informaticapoliciacivil.ii@gmail.com / SEI: 17009</p>
         <p>Sistema desenvolvido por <b>@Geann Gomes</b></p>
     </footer>
 </body>
 </html>
+
